--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
                     <hr>
                     <div class="d-flex justify-content-between">
                         <span>36 comments</span>
-                        <span>by Admin Nat</span>
+                        <span>by Admin Nurulloh</span>
                     </div>
                 </article>
                 {% endfor %}
