--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
                     </div>
                     <hr>
                     <div class="d-flex justify-content-between">
-                        <span>36 comments</span>
+                        <span>{{blog.get_count_comments}}ta kommentariya</span>
                         <span>by Admin Nurulloh</span>
                     </div>
                 </article>
